// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup tests disablePortal 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-hidden="false"
      class="QxBackdrop css-12w97d8-QxBackdrop-root-QxBackdrop-root appear-active"
      data-component="QxBackdrop"
    >
      <div
        class="QxPopup QxPopup_x_-8 QxPopup_y_-8 QxPopup_reference_window css-1wy5l3z-QxPopup-root"
      >
        Popup content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params disableBackdrop false 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="QxBackdrop css-12w97d8-QxBackdrop-root-QxBackdrop-root appear-active"
    data-component="QxBackdrop"
  >
    <div
      class="QxPopup QxPopup_reference_window css-139kadh-QxPopup-root"
      data-testid="testStyleParams-disableBackdrop-false"
    >
      Статус
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params disableBackdrop true 1`] = `
<DocumentFragment>
  <div
    class="QxPopup QxPopup_disableBackdrop QxPopup_reference_window css-i9hc1s-QxPopup-root"
    data-testid="testStyleParams-disableBackdrop-true"
  >
    Статус
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params reference relative 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="QxBackdrop css-12w97d8-QxBackdrop-root-QxBackdrop-root appear-active"
    data-component="QxBackdrop"
  >
    <div
      class="QxPopup QxPopup_reference_relative css-1x6rewr-QxPopup-root"
      data-testid="testStyleParams-reference-relative"
    >
      Статус
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popup tests style params reference window 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="QxBackdrop css-12w97d8-QxBackdrop-root-QxBackdrop-root appear-active"
    data-component="QxBackdrop"
  >
    <div
      class="QxPopup QxPopup_reference_window css-139kadh-QxPopup-root"
      data-testid="testStyleParams-reference-window"
    >
      Статус
    </div>
  </div>
</DocumentFragment>
`;
